--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -2,5 +2,5 @@
   <h1>About Me</h1>
   <p>Senior PHP Programmer at <a href="http://www.infinite.net.au">Infinite Networks</a>, an Australian ISP and development company.</p>
 
-  <p>I run a local Australian Team Fortress 2 community, <a href="http://ozfortress.com">ozfortress</a> in my spare time.</p>
+  <p>In my spare time I run a local Australian Team Fortress 2 community: <a href="http://ozfortress.com">ozfortress</a>.</p>
 </section>
