--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,3 +1,3 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }}
 </p>
