--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -24,10 +24,10 @@ layout: default
     </footer>
   {% endunless %}
 </article>
-{% if site.disqus_short_name and page.comments == true %}
+{% if site.comment_server_url and page.comments == true %}
   <section>
     <h1>Comments</h1>
-    <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
+    <div id="comments" class="comments" aria-live="polite">{% include post/comments.html %}</div>
   </section>
 {% endif %}
 </div>
