--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,60 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+.fos_comment_comment_form_holder {
+  .meta {
+    float: left;
+    width: 30%;
+  }
+
+  padding-bottom: 0.5em;
+}
+
+.fos_comment_comment_new_form {
+  textarea {
+    width: 100%;
+    height: 7em;
+  }
+
+  margin-left: 32%;
+  width: 68%;
+}
+
+.comments {
+  article {
+    clear: right;
+
+    .fos_comment_comment_metas {
+      .byline {
+        display: block;
+      }
+
+      .fn {
+        font-weight: bold;
+      }
+
+      time {
+        font-size: 0.85em;
+        color: $text-color-light;
+      }
+
+      font-size: 0.85em;
+      float: left;
+      width: 30%;
+    }
+
+    .fos_comment_comment_body {
+      margin-left: 32%;
+      min-height: 3em;
+      width: 68%;
+    }
+
+    .fos_comment_comment_replies {
+      button {
+        float: right;
+      }
+
+      margin-left: 1em;
+    }
+  }
+}
